# rqsession

./: .gitignore  Cargo.toml  README-Chinese.md  README.md  conftest.py  pyproject.toml  test_exmaple1.py  test_exmaple2.py
.config/: env_and_ops.md  env_and_ops1.md
.github/workflows/: build-wheels.yml  publish.yml
claude_log/: architecture.md  curl_cffi_notes.md  h2_fingerprint_plan.md  local_deploy.md  local_install_and_publish.md  profile_tools.md  request_flow.md  rust_session_async.md  rust_session_build.md  rust_session_overview.md  tls_extension_fix.md  tls_fingerprint_libs.md
dev/samples/: fp_collector.json  fp_collector_profile.json  tor_firefox_collector_profile.json
dev/samples/tls_html/: tls1.html
examples/: demo_browser_client.py  demo_kick_search.py  demo_kick_search2.py
requestsession/: config_util.py  request_session.py
requestsession/static/: useragents.txt
rqsession/: .env  __init__.py  cli.py  config.ini  config_util.py  enhanced_request_session.py  enhanced_request_session_v1.py  logger.py  request_session.py
rqsession/browser_forge/: AsyncEnhancedRequestSession.py  PROJECT_OVERVIEW.md  __init__.py  async_usage.py  fingerprint_convert.py  fp_collector-output.txt  tls.html  tls_db_converter.py  tor_firefox_collector.json  tor_fp_collector-output.txt
rqsession/browser_forge/core/: __init__.py  async_client.py  client.py  header_builder.py  rust_gateway_client.py
rqsession/browser_forge/fingerprint/: __init__.py  ja3_generator.py  tls_builder.py
rqsession/browser_forge/profiles/: __init__.py  models.py  presets.py
rqsession/browser_forge/sets/: edge142-2.json
rqsession/browser_forge/tls_fb_db/: README.md
rqsession/rust_session/: __init__.py  async_session.py  session.py
rqsession/rust_session/profiles/: __init__.py
rqsession/rust_session/profiles/builtin/: chrome114_android.json  chrome119_windows.json  chrome120_windows.json  chrome138.json  chrome138_windows.json  chrome140_macos.json  custom_profile_h1.json  edge141_windows.json  edge142_windows.json  edge147_windows.json  firefox133_windows.json  firefox146_windows.json  py37_aiohttp381_windows.json  safari17_macos.json  tor128_windows.json
rqsession/static/: language.txt
src/: cipher_map.rs  error.rs  http_client.rs  lib.rs  profile.rs  response.rs  tls_builder.rs
tests/: test_async_concurrency.py  test_exmaple1.py  test_request_session.py  test_session.py
tools/: tls_peet_to_profile.py
