[package]
name = "rqsession-core"
version = "0.3.2"
edition = "2021"

[lib]
name = "_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3       = { version = "0.22", features = ["extension-module"] }
tokio      = { version = "1",    features = ["full"] }
hyper      = { version = "1",    features = ["http1", "http2"] }
hyper-util = { version = "0.1",  features = ["tokio", "client", "http1", "http2"] }
http-body-util = "0.1"
boring     = "4"
tokio-boring = "4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytes      = "1"
http       = "1"
url        = "2"
flate2     = "1"
brotli     = "7"
zstd       = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
