[package]
name = "rqsession-core"
version = "0.4.0"
edition = "2021"

[lib]
name = "_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3                = { version = "0.22", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
tokio      = { version = "1",    features = ["full"] }
hyper      = { version = "1",    features = ["http1", "http2"] }
hyper-util = { version = "0.1",  features = ["tokio", "client", "http1", "http2"] }
http-body-util = "0.1"
h2         = "0.4"
boring     = "5"
boring-sys = "5"
foreign-types-shared = "0.3"
tokio-boring = "5"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytes      = "1"
http       = "1"
url        = "2"
flate2     = "1"
brotli     = "7"
zstd       = "0.13"

[patch.crates-io]
h2 = { path = "vendor/h2" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
