[tool.poetry]
name = "rqsession"
version = "0.3.2"
description = "Python requests session wrapper with advanced features for proxy management, session persistence, cookies auto update and request logging."
authors = ["leftmonster"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
curl-cffi = ">=0.7.0"


[project]
name = "rqsession"
version = "0.3.2"
description = "Python requests session wrapper with advanced features for proxy management, session persistence, cookies auto update and request logging."
authors = [
    {name = "leftmonster", email = "zhzhsgg@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.3",
    "curl-cffi>=0.7.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LeftMonster/rqsession"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "rqsession._rust_core"
python-source = "."
features = ["pyo3/extension-module"]
