[project]
name = "rqsession"
version = "0.3.2"
description = "Browser TLS fingerprint impersonation library powered by Rust (BoringSSL + hyper)."
authors = [
    {name = "leftmonster", email = "zhzhsgg@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.3",
    "curl-cffi>=0.7.0",
    "certifi>=2023.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/LeftMonster/requestsession"
Repository = "https://github.com/LeftMonster/requestsession"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "rqsession._rust_core"
python-source = "."
features = ["pyo3/extension-module"]
# Ensure JSON profile files are bundled into the wheel
include = [
    "rqsession/rust_session/profiles/builtin/*.json",
    "rqsession/rust_session/profiles/custom/.gitkeep",
]
